Changes to entities and relationships

--- a/mp/03/Hackathon/Hackathon/Base.lproj/Main.storyboard
+++ b/mp/03/Hackathon/Hackathon/Base.lproj/Main.storyboard
@@ -21,25 +21,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#Violations" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ej5-gg-gXU">
-                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                            <variation key="widthClass=compact" fixedFrame="YES">
-                                                <rect key="frame" x="292" y="11" width="86" height="21"/>
-                                            </variation>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IzM-GG-AkZ">
-                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                            <variation key="widthClass=compact" fixedFrame="YES">
-                                                <rect key="frame" x="176" y="11" width="36" height="21"/>
-                                            </variation>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CameraID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rij-Po-Hda">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Days" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rij-Po-Hda">
                                             <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="76" id="HHS-K2-9YD"/>
@@ -53,7 +35,7 @@
                                                 </mask>
                                             </variation>
                                             <variation key="widthClass=compact" ambiguous="YES" misplaced="YES">
-                                                <rect key="frame" x="41" y="11" width="76" height="21"/>
+                                                <rect key="frame" x="18" y="11" width="374" height="21"/>
                                                 <mask key="constraints">
                                                     <include reference="HHS-K2-9YD"/>
                                                 </mask>
@@ -62,23 +44,17 @@
                                     </subviews>
                                     <variation key="default">
                                         <mask key="subviews">
-                                            <exclude reference="Ej5-gg-gXU"/>
-                                            <exclude reference="IzM-GG-AkZ"/>
                                             <exclude reference="Rij-Po-Hda"/>
                                         </mask>
                                     </variation>
                                     <variation key="widthClass=compact">
                                         <mask key="subviews">
-                                            <include reference="Ej5-gg-gXU"/>
-                                            <include reference="IzM-GG-AkZ"/>
                                             <include reference="Rij-Po-Hda"/>
                                         </mask>
                                     </variation>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="cameraID" destination="Rij-Po-Hda" id="jWi-vT-zzS"/>
-                                    <outlet property="date" destination="IzM-GG-AkZ" id="pWh-u8-l1p"/>
-                                    <outlet property="violations" destination="Ej5-gg-gXU" id="1w5-hU-aTp"/>
+                                    <outlet property="days" destination="Rij-Po-Hda" id="Cah-2t-SDB"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -109,7 +85,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lZs-wu-qZx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-645" y="404"/>
+            <point key="canvasLocation" x="-633" y="404"/>
         </scene>
         <!--Item-->
         <scene sceneID="mU3-5j-RMC">
@@ -120,6 +96,7 @@
                         <viewControllerLayoutGuide type="bottom" id="46h-po-nrp"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="OlT-B4-xeZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
