--- a/mp/02/Improved Unit Converter/Improved Unit Converter/Base.lproj/Main.storyboard
+++ b/mp/02/Improved Unit Converter/Improved Unit Converter/Base.lproj/Main.storyboard
@@ -87,8 +87,7 @@
                                                     <exclude reference="ZE4-8F-oiR"/>
                                                 </mask>
                                             </variation>
-                                            <variation key="widthClass=compact" misplaced="YES">
-                                                <rect key="frame" x="126" y="8" width="97" height="30"/>
+                                            <variation key="widthClass=compact">
                                                 <mask key="constraints">
                                                     <include reference="ZE4-8F-oiR"/>
                                                 </mask>
