--- a/mp/03/Hackathon/Hackathon/Base.lproj/LaunchScreen.storyboard
+++ b/mp/03/Hackathon/Hackathon/Base.lproj/LaunchScreen.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -18,43 +17,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MP 3&amp;4 - HACKATHON" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QDo-sq-uTK">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Traffic-Sign-Icon" translatesAutoresizingMaskIntoConstraints="NO" id="X4A-cg-xrj">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="50" y="188" width="300" height="353"/>
+                                </variation>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera Violations " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JUQ-ke-xnJ">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="20" y="15" width="360" height="416"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <fontDescription key="fontDescription" name="Copperplate-Bold" family="Copperplate" pointSize="31"/>
+                                    <rect key="frame" x="42" y="20" width="317" height="139"/>
+                                </variation>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Analyzer" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ym5-CJ-IAI">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" name="Copperplate-Bold" family="Copperplate" pointSize="30"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="105" y="123" width="191" height="21"/>
                                 </variation>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="QDo-sq-uTK" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="31" id="B1I-ss-cyZ"/>
-                            <constraint firstItem="QDo-sq-uTK" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" id="WzJ-LE-qOo"/>
-                            <constraint firstItem="QDo-sq-uTK" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="aOf-HS-KlQ"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="QDo-sq-uTK" secondAttribute="bottom" constant="169" id="z03-LF-ZDv"/>
-                        </constraints>
+                        <color key="backgroundColor" red="1" green="0.92908299595054888" blue="0.42231540559931602" alpha="1" colorSpace="calibratedRGB"/>
                         <variation key="default">
                             <mask key="subviews">
-                                <exclude reference="QDo-sq-uTK"/>
-                            </mask>
-                            <mask key="constraints">
-                                <exclude reference="B1I-ss-cyZ"/>
-                                <exclude reference="WzJ-LE-qOo"/>
-                                <exclude reference="aOf-HS-KlQ"/>
-                                <exclude reference="z03-LF-ZDv"/>
+                                <exclude reference="X4A-cg-xrj"/>
+                                <exclude reference="JUQ-ke-xnJ"/>
+                                <exclude reference="ym5-CJ-IAI"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
-                                <include reference="QDo-sq-uTK"/>
-                            </mask>
-                            <mask key="constraints">
-                                <include reference="B1I-ss-cyZ"/>
-                                <include reference="WzJ-LE-qOo"/>
-                                <include reference="aOf-HS-KlQ"/>
-                                <include reference="z03-LF-ZDv"/>
+                                <include reference="X4A-cg-xrj"/>
+                                <include reference="JUQ-ke-xnJ"/>
+                                <include reference="ym5-CJ-IAI"/>
                             </mask>
                         </variation>
                     </view>
@@ -64,4 +65,7 @@
             <point key="canvasLocation" x="303" y="368"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Traffic-Sign-Icon" width="502" height="499"/>
+    </resources>
 </document>
